--- a/activity/templates/index.html
+++ b/activity/templates/index.html
@@ -139,9 +139,22 @@
 {% if activity_list %}
 <div class="container">
     <div class="grid-row">
+    
+        {% if recommend_list|length and not activity_list.has_previous and sort is None and filter_act is None and search_box is None and not category %}
+        <h2 class="container" style="text-align: center; padding-bottom: 20px; font-family: Verdana, Geneva, Tahoma, sans-serif">Recommended for You</h1>
+        
+            {% for activity in recommend_list %}
+            {% include "activity.html" with activity=activity index=1 %}
+            {% endfor %}
+       
+        {% endif %}
+        {% if not activity_list.has_previous and sort is None and filter_act is None and search_box is None and not category %}
+        <h2 class="container" style="text-align: center; padding-bottom: 20px; padding-top: 20px; font-family: Verdana, Geneva, Tahoma, sans-serif">Featured Activities</h1>
+        {% endif %}
         {% for activity in activity_list %}
         {% include "activity.html" with activity=activity index=1 %}
         {% endfor %}
+
     </div>
 </div>
 
