--- a/activity/templates/profile.html
+++ b/activity/templates/profile.html
@@ -22,6 +22,14 @@
                     {% endfor %}
                     {% endif %}
                 </select>
+                <div class="form-check mr-auto">
+                    {% if recommended_acts == True %}
+                    <input type="checkbox" class="form-check-input reco" id="exampleCheck1" checked value="{{recommended_acts}}">
+                    {% else %}
+                    <input type="checkbox" class="form-check-input reco" id="exampleCheck1" value="{{recommended_acts}}">
+                    {% endif %}
+                    <label class="form-check-label" for="exampleCheck1">Show Recommended Activities</label>
+                </div>
             </form>
             <br />
 
