--- a/activity/templates/profile.html
+++ b/activity/templates/profile.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!--Shows jumbotron with user's name on it-->
 <div class="jumbotron" style="background-image: linear-gradient(135deg, rgba(30, 33, 33, .82) 1%, rgba(32, 32, 32, .14) 98%), url('../static/images/profile.jpeg');">
     <div class="jumbo-text .animated .fadeUpBig" style="color: white; text-align: center;">
         <h1 class="display-4" style="background-color: none;">{{ user.username }}'s profile</h1>
     </div>
 </div>
-
 <div class="container">
+    <!--Button to delete account-->
     <button type="button" class="btn btn-danger ml-auto" href="#acct_confirm" data-toggle="modal">Delete Account</button>
-    <div class="panel profile-panel">      
+    <div class="panel profile-panel">
+        <!--Show interest that can be added to user profile-->   
        <h3>Add Interests</h3>
-       
         <div class="panel-body">
             <form type="get" action=".">
                 <select name="new_interest" id="new_interest"  class="form-control cats addInt" >
@@ -22,19 +22,9 @@
                     {% endfor %}
                     {% endif %}
                 </select>
-                <!--
-                <div class="form-check mr-auto">
-                    {% if recommended_acts == True %}
-                    <input type="checkbox" class="form-check-input reco" id="exampleCheck1" checked value="{{recommended_acts}}">
-                    {% else %}
-                    <input type="checkbox" class="form-check-input reco" id="exampleCheck1" value="{{recommended_acts}}">
-                    {% endif %}
-                    <label class="form-check-label" for="exampleCheck1">Show Recommended Activities</label>
-                </div>
-                -->
             </form>
             <br />
-
+            <!--Already added interests-->
             <div class="button-area" id="button-area">
                 {% if user_interest_list %}
                 {% for int in user_interest_list %}
@@ -43,16 +33,13 @@
                 {% endfor %}
                 {% endif %}
             </div>
-
         </div>
     </div>
-    
 </div>
-
 <hr />
 <h2 class="display-5 text-center">Saved Activities</h2>
 <hr />
-
+<!--Show any saved activites-->
 {% if activity_list %}
 <div class="container">
     <div class="grid-row">
@@ -61,13 +48,12 @@
         {% endfor %}
     </div>
 </div>
-
-{% else %}
+{% else %} <!--If the user does not have any saved activities tell them how to save one-->
 <div class="container">
     <h3><em> Click the <i class="fas fa-bookmark" style="color:#007bff"></i> icon on any activity to save it here. </em></h3>
 </div>
 {% endif %}
-
+<!--Modal to confirm the user wants to delete their account-->
 <div class="modal" id="acct_confirm" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
