--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -191,6 +191,7 @@
                       <option value="Functionality issue with Docent">Functionality</option>
                       <option value="Broken Link with Docent">Broken Link</option>
                       <option value="Account Issue with Docent">Account Issue</option>
+                      <option value="Other Issue with Docent">Other</option>
                     </select>
                 </div>
                     <div class="form-group">
